# companion-cube-ui

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  Cargo.toml  DECISIONS.md  GEMINI.md  README.md  check_services.ps1  index.html  package-lock.json  package.json  svelte.config.js  test_buckets.ps1  test_fix.sh  test_frontend.html  test_generate.ps1  test_invoke.html  vite.config.js  vite.config.ts
crates/ccube-capture/: Cargo.toml
crates/ccube-capture/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/ccube-capture/src/ocr/: fallback.rs  linux.rs  macos.rs  mod.rs  windows.rs
crates/ccube-capture/tests/: ocr_engine.rs
crates/ccube-cli/: Cargo.toml
crates/ccube-cli/src/: daemon_client.rs  main.rs  paths.rs
crates/ccube-cli/src/commands/: activity.rs  capture.rs  correct.rs  curate.rs  daemon.rs  detect.rs  memory.rs  mod.rs  reflect.rs
crates/ccube-core/: Cargo.toml
crates/ccube-core/src/: briefing.rs  db.rs  eval.rs  focus_mode.rs  lib.rs  llm.rs  memory.rs  paths.rs  rhythm.rs  service.rs
crates/ccube-core/src/agents/: curator.rs  detector.rs  mod.rs  reflector.rs
crates/ccube-core/src/prompts/: curator.v1.md  detector.v1.md  detector_v2_step1.md  detector_v2_step2.md  reflector.v1.md
crates/ccube-daemon/: Cargo.toml  build.rs
crates/ccube-daemon/src/: http.rs  main.rs  notify.rs  scheduler.rs  tray.rs
docs/specs/: 2026-05-15-macos-capture-design.md  2026-05-15-macos-capture-plan.md  2026-05-21-history-time-range.md  2026-06-10-learning-loop-live-memory.md  2026-06-11-history-organization-and-app-bundle.md  2026-06-13-open-session-grouping.md
docs/superpowers/plans/: 2026-05-18-tauri-frontend.md  2026-05-30-rhythm-browser-pivot.md
docs/superpowers/specs/: 2026-05-18-tauri-frontend-design.md  2026-05-30-rhythm-browser-pivot-design.md
examples/: activitywatch_bucket_examples.json
examples/bucket_samples/: aw-watcher-afk_HarryYu-Desktop_events.json  aw-watcher-vscode_HarryYu-Desktop_events.json  aw-watcher-window_HarryYu-Desktop_events.json
scripts/: dev-signing-identity.sh  make-bundle.sh
src/: App.tsx  app.css  app.html  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: coach_todos.json  config.json  daily_summary.txt  hourly_summary.txt  study_summary.txt
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lib_old.rs  main.rs  test_aw.rs
src-tauri/src/modules/: activity_watch.rs  activity_watch_fix.rs  advanced_analyzer.rs  ai_integration.rs  app_state.rs  database.rs  default_categories.rs  enhanced_processor.rs  event_processor.rs  interaction_tracker.rs  mod.rs  mode_handlers.rs  pattern_analyzer.rs  productivity_calc.rs  simplified_processor.rs  tauri_commands.rs  utils.rs
src/components/: ActivityChart.tsx  EmptyState.svelte  History.tsx  MainContent.tsx  Nudge.tsx  Rail.svelte  Rhythm.svelte  Settings.tsx  Sidebar.tsx  Terminal.tsx  Timeline.svelte  TimelineGroup.svelte  TimelineItem.svelte  Toast.tsx  Vault.tsx  VaultRow.svelte  VaultTable.svelte
src/lib/: api.ts  stores.ts  theme.ts  types.ts
src/routes/: +layout.svelte
src/utils/: designSystem.ts  theme.ts
