[package]
name = "ccube-capture"
version.workspace = true
edition.workspace = true

[dependencies]
ccube-core = { path = "../ccube-core" }
tokio = { version = "1", features = ["full", "sync"] }
tracing = "0.1"
anyhow = "1"
thiserror = "2"
chrono = "0.4"
xcap = "0.3"
image = "0.25"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_SystemInformation",
    "Win32_Graphics_Gdi",
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
] }
active-win-pos-rs = "0.10"
