[package]
name = "ccube-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ccube"
path = "src/main.rs"

[dependencies]
ccube-core = { path = "../ccube-core" }
ccube-capture = { path = "../ccube-capture" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
anyhow = "1"
chrono = "0.4"
dotenvy = "0.15"
