[package]
name = "ccube-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled-full"] }
similar = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
directories = "6"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
