[package]
name = "ccube-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
ccube-core = { path = "../ccube-core" }
ccube-capture = { path = "../ccube-capture" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
async-trait = "0.1"
dotenvy = "0.15"
